<resources>
    <string name="app_name">iTipper</string>
    <string name="edit_message">Describe your location &#8230;</string>
    <string name="button_send">Gmap</string>
    <string name="button_My_Map">Map(internal)</string>
    <string name="title_activity_maps">Map</string>

    <string name="go_to_graph_display_button">Go to graph display screen</string>
    <string name="go_to_map_display_button">Go to maps dialog screen</string>
    <string name="go_to_tips_entry">Go to tip entry screen</string>
    <string name="example_graph_button">Go to example graph (default data)</string>
    <string name="tips_graph_button">Go to graph with tip data</string>
    <string name="destination_message">Enter a new location &#8230;</string>
    <string name="button_search">GMap</string>
    <string name="choose_graph">Choose which graph to display.</string>


    <string name="view_user_activity_button">View tips you\'ve entered so far</string>
    <string name="view_shifts_button">View shifts you\'ve recorded so far</string>


    <string name="tip_entry_screen_title">Add a tip</string>
    <string name="custom_tip_prompt">Custom tip</string>
    <string name="record_tip">+</string>
    <string name="enter_tip">Enter tip</string>
    <string name="tip_response_text"> </string>
    <string name="start_shift_button">Start shift</string>
    <string name="end_shift_button">End shift</string>
    <string name="edit_tips_button">Edit tips</string>
    <string name="view_tips_button">View tips</string>
    <string name="view_graph_button">View graph</string>
    <string name="mark_tip_button">Mark $</string>
    <string name="view_shift">Shifts</string>
    <string name="view_map_button"> View Map</string>


    <string name="user_activity_title">Your tips:</string>

    <string name="shifts_header">Here are all of the shifts you have recorded so far.</string>


    <string name="api_key">AIzaSyCxPhjgrmWrjSFjFMJx-YMNfXiTcq7j4Xg</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_activity_button_text">View your activity</string>
    <string name="logout_button_text">Logout</string>
    <string name="view_all_tips_button_text">View all tips you\'ve entered</string>
    <string name="password_recovery_header_text">Enter the email you signed up with.</string>
    <string name="email_hint">Email…</string>
    <string name="send_email">Send email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="default_button_text">Button</string>
    <string name="custom_tip_hint">Custom tip</string>
    <string name="default_tip_value_text">$</string>
    <string name="default_tip_date_text">mm/dd/yyyy hh:mm</string>
    <string name="time_entered">Time entered</string>
    <string name="edit_value">Edit Value</string>
    <string name="done_button">Done</string>
    <string name="shift_text">Shift Text</string>
    <string name="start">Start</string>
    <string name="end">End</string>
</resources>